--- a/VRChat/94/1246094.html
+++ b/VRChat/94/1246094.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "PZ1RvRs8/9ydLx41WRBhJpuzD41q/W0y561YsrD3dyg="></script>
+    "SRISHjJTEv1mSPEme9RQCO4oxz5WY+zHQLvsmOcWiOo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用アバターモデル　茶ねこ","description":"※VRC用はSDK2のセットアップをしています！\n\nVRCを想定して作った3Dアバター、獣人・猫ケモ、茶ねこです。\nまつ毛を無くすと中性的、男の子にもなれます。\nUnityパッケージには無料アセットを用いた揺れものを設定済。\n耳と、尻尾の先端は猫らしさ満点のアニメーションを入れてみました。\n\n--------2020/09/16--------\n追加データをアップロードしました！\n・耳の中の毛をフサフサにしました！\n・DynamicBoneを設定！\n・VRC Avatar Descriptorを設定。オーバーライドも設定。\n・マテリアルをUTS2に変更。（入っている説明書通りに導入してね！）\n・オマケで、灰色ねこのマテリアルと、フリルの服を追加しました。\n--------------------------\n\n\n\n内容物\n・モデルデータ（fbx）\n・モデルデータ（blender）\n・テクスチャ ２枚\n・ＵＶ展開図テクスチャ ２枚\n・Unityパッケージ「茶ねこアップロードセット」\n　・アニメーション４種\n　・マテリアル２つ\n　・まんまるシェーダー\n・茶ねこ説明書（メモ帳）\n\n利用規約\n・学力不足につき日本語にしか対応できません。\n・再配布、転売は禁止です。\n・加工、商用利用は可能、Vtuberも歓迎です。\n\n問い合わせ先はコチラ\nhttps://twitter.com/0chitter0\n\n何かわからないことや、ご要望など積極的に対応していきたいと思っています。私もそこまで詳しくないのですが、わかることは何でも応えます。","url":"https://booth.pm/ja/items/1246094","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/91753d52-c0a0-4325-becb-46f083d22a26/i/1246094/35a9aaa1-517e-4cde-9b0f-c98124daa7bc_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PZ1RvRs8/9ydLx41WRBhJpuzD41q/W0y561YsrD3dyg="></script>
+    nonce="SRISHjJTEv1mSPEme9RQCO4oxz5WY+zHQLvsmOcWiOo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -186,7 +186,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              110
+                              109
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -201,7 +201,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              110
+                              109
                             </div>
                           </div></a>
                         </div>
@@ -633,7 +633,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
